# OpenCVAndroidPlugin

app/: build.gradle
app/src/androidTest/java/com/example/opencvandroidplugin/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  OpenCVPlugin.cpp  OpenCVPlugin.hpp
app/src/main/java/com/example/opencvandroidplugin/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/opencvandroidplugin/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
